<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_dashboard"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/title_dashboard"/>

    <item
            android:id="@+id/navigation_timetable"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/title_timetable"/>

    <item
            android:id="@+id/navigation_multifunction"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/title_multifunction_button"/>

    <item
            android:id="@+id/navigation_goals"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/title_goals"/>

    <item
            android:id="@+id/navigation_social"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/title_social"/>

</menu>
